@@ -1,0 +1,10 @@
+Title: Fixed wrong filters in Eventviews linked by Tactical Overview
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i4
+Date: 1484748386
+
+
